(library
 (name mccs)
 (public_name mccs)
 (modules :standard \ context_flags)
 (foreign_stubs
  (language cxx)
  (names changed_criteria constraint_generation count_criteria
   cudf_reductions cudf_tools glpk_solver lp_solver lexagregate_combiner
   new_criteria notuptodate_criteria removed_criteria mccscudf mccs_stubs)
  (flags
   :standard
   (:include cxxflags.sexp)))
 (library_flags
  :standard
  (:include flags.sexp))
 (wrapped false)
 (libraries
  cudf
  (select
   config.h
   from
   (mccs.glpk.internal -> config.internal.h)
   (mccs.glpk.shared -> config.external.h)
   (mccs.glpk.static -> config.external.h))))

(rule
  (with-stdout-to config.internal.h (echo "#include \"glpk/glpk.h\"")))

(rule
  (with-stdout-to config.external.h (echo "#include <glpk.h>")))

(rule
 (targets cxxflags.sexp flags.sexp)
 (deps context_flags.ml (universe))
 (action
  (run ocaml %{deps})))
